--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Scramble</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="CLASSIFIED">CLASSIFIED</h1>
+    <h1 data-value="CLASSIFIED">CLASSIFIED</h1>
+    <script src="script.js"></script>
 </body>
 </html>
