added class scramble

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 data-value="CLASSIFIED">CLASSIFIED</h1>
+    <h1 class="scramble" data-value="CLASSIFIED">CLASSIFIED</h1>
     <script src="script.js"></script>
 </body>
 </html>
